[metadata]
name = django_peertube_runner_connector
description = A django application to connect to a peertube runner and transcode videos
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
version = 1
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    peertube
    transcode
url = https://github.com/openfun/django-peertube-runner-connector
requires_python = >=3.8

[options]
install_requires =
    django>=3.2,<4.3
    djangorestframework==3.14
    ffmpeg-python==0.2.0
    python-socketio==5.9
    django-storages==1.13.2
    boto3==1.28.42
    shortuuid==1.0.0
    websockets==11.0.3

include_package_data = true
packages = find:
package_dir =
    =src
zip_safe = True

[options.packages.find]
where =
    src
exclude =
    tests

[options.extras_require]
dev =
    bandit==1.7.4
    black==22.3.0
    check-manifest==0.48
    cryptography==37.0.2
    flake8==4.0.1
    httpretty==1.1.4
    ipython==8.4.0
    isort==5.10.1
    pycodestyle==2.8.0
    pylint==2.17.5
    pylint-pytest==1.1.2
    pyOpenSSL==20.0.1
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-django==4.5.2
    pytest-freezegun==0.4.2
    pytest-mock==3.7.0
    signxml==2.9.0
    tox
    wheel==0.37.1
    django-configurations==2.4.1
    uvicorn==0.23.2
    factory_boy==3.3.0
    whitenoise==6.5.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests
pythonpath = . src

[coverage:paths]
source =
    ./src/django_peertube_runner_connector

[coverage:run]
branch = true
parallel = true
source =
    django_peertube_runner_connector

[coverage:report]
show_missing = true
skip_empty = true
precision = 2

[isort]
combine_as_imports=1
default_section=THIRDPARTY
force_sort_within_sections=1
from_first=1
include_trailing_comma=1
indent='    '
known_django=django
known_first_party=django_peertube_runner_connector
line_length=88
lines_after_imports=2
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1