[metadata]
name = django_peertube_runner_connector
description = A django application to connect to a peertube runner and transcode videos
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
version = 0.5.0
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    peertube
    transcode
url = https://github.com/openfun/django-peertube-runner-connector
requires_python = >=3.10

[options]
install_requires =
    django>=4.2,<6
    djangorestframework>=3,<4
    ffmpeg-python>=0.2.0,<1
    python-socketio>=5,<6
    django-storages>=1,<2
    boto3>=1.9,<2
    websockets>=11,<12
    redis>=5.0.0,<6

include_package_data = true
packages = find:
package_dir =
    =src
zip_safe = True

[options.packages.find]
where =
    src
exclude =
    tests

[options.extras_require]
dev =
    bandit==1.7.4
    black==23.11.0
    check-manifest==0.48
    cryptography==37.0.2
    flake8==6.1.0
    httpretty==1.1.4
    ipython==8.4.0
    isort==5.13.0
    pycodestyle==2.11.0
    pylint==3.0.2
    pylint-pytest==1.1.7
    pyOpenSSL==20.0.1
    pytest==7.4.3
    pytest-cov==4.1.0
    pytest-django==4.7.0
    pytest-mock==3.12.0
    signxml==2.9.0
    tox
    wheel==0.42.0
    django-configurations==2.5
    uvicorn==0.24.0
    factory_boy==3.3.0
    whitenoise==6.5.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py
extend-ignore = E203

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests
pythonpath = . src

[coverage:paths]
source =
    ./src/django_peertube_runner_connector

[coverage:run]
branch = true
parallel = true
source =
    django_peertube_runner_connector

[coverage:report]
show_missing = true
skip_empty = true
precision = 2

[isort]
combine_as_imports=1
default_section=THIRDPARTY
force_sort_within_sections=1
from_first=1
include_trailing_comma=1
indent='    '
known_django=django
known_first_party=django_peertube_runner_connector
line_length=88
lines_after_imports=2
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1